# Folkeregisterboeder-attended

./: README.md  pyproject.toml
folkeregisterboeder_attended/: main.py
